@@ -1,7 +1,11 @@
 haskell-devscripts (0.7.10) UNRELEASED; urgency=low
 
+  [ Joachim Breitner ]
   * dh_haskell_shlibdeps: Mangle paths in package descriptions more
     selectively
+
+  [ Marco Túlio Gontijo e Silva ]
+  * Dh_Haskell.sh: ghc_pkg_field.
 
  -- Joachim Breitner <nomeata@debian.org>  Fri, 23 Apr 2010 11:36:31 -0300
 
